--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - godot_version: 4.4
-            release_name: stable
-          - godot_version: 4.4.1
-            release_name: stable
+          - godot_version: 4.5
+            release_name: rc1
     needs: determine_version
     uses: ./.github/workflows/build-image.yml
     with:
